--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "compression": "^1.7.4",
+    "cookies": "^0.8.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "node-fetch": "^2.6.0"
   }
 }
