--- a/prepros.config
+++ b/prepros.config
@@ -594,7 +594,7 @@
           "extension": ".css",
           "type": "SOURCE_RELATIVE",
           "relativePath": "",
-          "suffix": "-dist",
+          "suffix": ".min",
           "alwaysSuffix": false
         }
       },
