--- a/prepros.config
+++ b/prepros.config
@@ -910,6 +910,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "public/script_n_dark.js",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "public/style.css",
+        "config": {
+          "autoCompile": true
+        }
+      }
+    ]
   }
 }
