--- a/prepros.config
+++ b/prepros.config
@@ -334,10 +334,10 @@
         },
         "sourceMap": false,
         "toplevel": false,
-        "ie8": false,
+        "ie8": true,
         "keep_classnames": false,
         "keep_fnames": false,
-        "safari10": false
+        "safari10": true
       },
       "node-sass": {
         "indentType": "space",
